fix: remove z-index from play button

--- a/src/v2/styles/AttachmentList/AttachmentList-layout.scss
+++ b/src/v2/styles/AttachmentList/AttachmentList-layout.scss
@@ -340,7 +340,6 @@
     height: calc(var(--str-chat__spacing-px) * 36);
     width: calc(var(--str-chat__spacing-px) * 36);
     cursor: pointer;
-    z-index: 1;
 
     svg {
       width: var(--str-chat__spacing-3);
